<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sky"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00004C"
    tools:context=".PropertyAnimationActivity">

    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sun"
        android:src="@drawable/sun" />

    <ImageView
        android:id="@+id/cloud1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/cloud"
        android:src="@drawable/cloud" />

    <ImageView
        android:id="@+id/cloud2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-300dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/cloud"
        android:src="@drawable/cloud" />

    <RelativeLayout
        android:id="@+id/ground"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/sun"
        android:background="#004700"></RelativeLayout>

    <ImageView
        android:id="@+id/window"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/window"
        android:src="@drawable/window" />

    <ToggleButton
        android:id="@+id/toggleAnimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:checked="false"
        android:onClick="onToggleClicked"
        android:textColor="#ffffff"
        android:textOff="@string/animation_off"
        android:textOn="@string/animation_on" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />
</RelativeLayout>
